@@ -8,6 +8,8 @@ lxml changelog
 Features added
 --------------
 
+* Data elements in objectify support repr(), which is now used by dump()
+
 * Source distribution now ships with a patched Pyrex
 
 * New C-API function makeElement() to create new elements with text,
@@ -19,6 +21,8 @@ Features added
 
 Bugs fixed
 ----------
+
+* Parser resources were not free before the next parser run
 
 * Open files and XML strings returned by Python resolvers were not
   closed/freed
